--- a/compiler.cabal
+++ b/compiler.cabal
@@ -15,9 +15,11 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lexer
+  exposed-modules:     Lexer, Parser
   build-depends:       base >= 4.7 && < 5
                      , mtl >= 2.2.1 && < 3.0.0
+                     , transformers >= 0.4.2 && < 0.5.0
+                     , transformers-base >= 0.4.4 && < 0.5.0
 
   default-language:    Haskell2010
 
