--- a/compiler.cabal
+++ b/compiler.cabal
@@ -15,12 +15,13 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lexer, Parser, CodeGeneration
+  exposed-modules:     Lexer, Parser, CodeGeneration, Types, Emit
   build-depends:       base >= 4.7 && < 5
+                     , containers  >= 0.5.6 && < 0.6.0
                      , mtl >= 2.2.1 && < 3.0.0
                      , transformers >= 0.4.2 && < 0.5.0
                      , transformers-base >= 0.4.4 && < 0.5.0
-                     , llvm-general-pure >= 3.5.0.0 && < 3.6.0.0
+                     , llvm-general-pure
                      , llvm-general
 
   default-language:    Haskell2010
@@ -31,6 +32,7 @@ executable compiler-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , compiler
+                     , llvm-general-pure
   default-language:    Haskell2010
 
 test-suite compiler-test
@@ -39,6 +41,7 @@ test-suite compiler-test
   main-is:             Spec.hs
   build-depends:       base
                      , compiler
+                     , hspec >= 2.2.3 && < 2.3.0
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
