--- a/compiler.cabal
+++ b/compiler.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lexer, Parser, CodeGeneration, Types, Emit
+  exposed-modules:     Lexer, Parser, CodeGeneration, Types, Emit, JIT
   build-depends:       base >= 4.7 && < 5
                      , containers  >= 0.5.6 && < 0.6.0
                      , mtl >= 2.2.1 && < 3.0.0
