--- a/compiler.cabal
+++ b/compiler.cabal
@@ -42,6 +42,7 @@ test-suite compiler-test
   build-depends:       base
                      , compiler
                      , hspec >= 2.2.3 && < 2.3.0
+                     , mtl
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
